--- a/package.json
+++ b/package.json
@@ -67,5 +67,10 @@
     "tsdx": "^0.14.0",
     "tslib": "^2.0.1",
     "typescript": "^4.0.3"
+  },
+  "dependencies": {
+    "@types/styled-components": "^5.1.3",
+    "focus-visible": "^5.1.0",
+    "styled-components": "^5.2.0"
   }
 }
