--- a/package.json
+++ b/package.json
@@ -72,6 +72,8 @@
     "@types/styled-components": "^5.1.3",
     "focus-visible": "^5.1.0",
     "prop-types": "^15.7.2",
+    "react-collapse-pane": "^1.4.2",
+    "react-virtualized-auto-sizer": "^1.0.2",
     "react-window": "^1.8.5",
     "styled-components": "^5.2.0"
   }
