--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "size": "size-limit",
     "analyze": "size-limit --why",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook --no-dll"
   },
   "peerDependencies": {
     "react": ">=16"
