--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "react-collapse-pane": "^1.4.2",
     "react-virtualized-auto-sizer": "^1.0.2",
     "react-window": "^1.8.5",
+    "react-windowed-select": "^2.0.3",
     "styled-components": "^5.2.0"
   }
 }
