--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "typescript": "^4.0.3"
   },
   "dependencies": {
+    "@types/react-select": "^3.0.21",
     "@types/react-window": "^1.8.2",
     "@types/styled-components": "^5.1.3",
     "focus-visible": "^5.1.0",
