--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "focus-visible": "^5.1.0",
     "prop-types": "^15.7.2",
     "react-collapse-pane": "^1.4.2",
+    "react-focus-lock": "^2.4.1",
     "react-virtualized-auto-sizer": "^1.0.2",
     "react-window": "^1.8.5",
     "react-windowed-select": "^2.0.3",
