--- a/package.json
+++ b/package.json
@@ -68,13 +68,16 @@
     "typescript": "^4.0.3"
   },
   "dependencies": {
+    "@types/react-mentions": "^3.3.0",
     "@types/react-select": "^3.0.21",
     "@types/react-window": "^1.8.2",
     "@types/styled-components": "^5.1.3",
     "focus-visible": "^5.1.0",
+    "lodash": "^4.17.20",
     "prop-types": "^15.7.2",
     "react-collapse-pane": "^1.4.2",
     "react-focus-lock": "^2.4.1",
+    "react-mentions": "^4.0.2",
     "react-virtualized-auto-sizer": "^1.0.2",
     "react-window": "^1.8.5",
     "react-windowed-select": "^2.0.3",
