--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "react-collapse-pane": "^1.4.2",
     "react-focus-lock": "^2.4.1",
     "react-mentions": "^4.0.2",
+    "react-range": "^1.8.2",
     "react-virtualized-auto-sizer": "^1.0.2",
     "react-window": "^1.8.5",
     "react-windowed-select": "^2.0.3",
